Bug 370301 - Auto grouping of any program windows does not work
Summary: Auto grouping of any program windows does not work
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: rules (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D2996
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-08 14:23 UTC by bluelupo
Modified: 2016-10-17 06:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.8.2
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments
systemsettings dialog (61.32 KB, image/png)
2016-10-08 14:26 UTC, bluelupo
Details
systemsettings dialog (65.49 KB, image/png)
2016-10-08 14:26 UTC, bluelupo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bluelupo 2016-10-08 14:23:58 UTC
Hi Maintainer,

If I create a rule for the autogrouping of any program (such as kwrite) and save it through the "systemettings / window management / window rules" they have no effect.

Different instances of the same program are always displayed in a separate window and not in an additional tab (as you would expect).

The rules that have been created are shown in the attached screenshot.

Reproducible: Always

Steps to Reproduce:
reproducible at any time

Actual Results:  
These types of window rules can be created but do not work.


Kernel: 4.8.0
Distribution: Siduction (based on Debian SID)

# dpkg -l|egrep '(kwin|systemsettings|plasma)'

ii  kde-plasma-desktop                            5:91                                 amd64        KDE Plasma Desktop and minimal set of applications
ii  kdeplasma-addons-data                         4:5.7.4-1                            all          locale files for kdeplasma-addons
ii  kwin-addons                                   4:5.7.4-1                            amd64        additional desktop and window switchers for KWin
ii  kwin-common                                   4:5.7.4-1                            amd64        KDE window manager, common files
ii  kwin-data                                     4:5.7.4-1                            all          KDE window manager data files
ii  kwin-style-breeze                             4:5.7.4-1                            amd64        KWin Breeze Style
ii  kwin-x11                                      4:5.7.4-1                            amd64        KDE window manager, X11 version
ii  libkdeclarative5                              4:4.14.23-1                          amd64        declarative library for plasma
ii  libkf5plasma5:amd64                           5.26.0-2                             amd64        Plasma Runtime components
ii  libkf5plasmaquick5:amd64                      5.26.0-2                             amd64        Plasma Runtime components
ii  libkwin4-effect-builtins1                     4:5.7.4-1                            amd64        KDE window manager effect builtins library
ii  libkwineffects8                               4:5.7.4-1                            amd64        KDE window manager effects library
ii  libkwinglutils8                               4:5.7.4-1                            amd64        KDE window manager gl utils library
ii  libkwinxrenderutils8                          4:5.7.4-1                            amd64        KDE window manager render utils library
ii  libplasma-geolocation-interface5              4:5.7.4-1                            amd64        Plasma Workspace for KF5 library
ii  libplasma3                                    4:4.14.23-1                          amd64        Plasma Library for the KDE Platform
ii  plasma-dataengines-addons                     4:5.7.4-1                            amd64        additional data engines for Plasma
ii  plasma-desktop                                4:5.7.4-2                            amd64        Tools and widgets for the desktop
ii  plasma-desktop-data                           4:5.7.4-2                            all          Tools and widgets for the desktop data files
ii  plasma-framework                              5.26.0-2                             amd64        Plasma Runtime components
ii  plasma-integration                            5.7.4-1                              amd64        Qt Platform Theme integration plugins for KDE Plasma
ii  plasma-pa                                     5.7.4-1                              amd64        Plasma 5 Volume controller
ii  plasma-runners-addons                         4:5.7.4-1                            amd64        additional runners for Plasma 5 and Krunner
ii  plasma-scriptengine-javascript                4:16.08.0-1                          amd64        JavaScript script engine for Plasma
ii  plasma-wallpapers-addons                      4:5.7.4-1                            amd64        additional wallpaper plugins for Plasma 5
ii  plasma-widgets-addons                         4:5.7.4-1                            amd64        additional widgets for Plasma 5
ii  plasma-workspace                              4:5.7.4-1                            amd64        Plasma Workspace for KF5
ii  qml-module-org-kde-kwindowsystem:amd64        5.26.0-1                             amd64        provides integration of QML and KDE frameworks - kwindowsystem
ii  systemsettings                                4:5.7.4-1                            amd64        System Settings interface
Comment 1 bluelupo 2016-10-08 14:26:01 UTC
Created attachment 101488 [details]
systemsettings dialog
Comment 2 bluelupo 2016-10-08 14:26:47 UTC
Created attachment 101489 [details]
systemsettings dialog
Comment 3 bluelupo 2016-10-08 14:28:50 UTC
If you need more information about my system, I would like to post it here.

regards
Michael Singer
Comment 4 Martin Flöser 2016-10-08 17:07:16 UTC
window grouping is currently not supported. We should hide the UI elements till we get support for it again.
Comment 5 Martin Flöser 2016-10-10 06:34:39 UTC
Change to remove autogrouping: https://phabricator.kde.org/D2996
Comment 6 Martin Flöser 2016-10-17 06:03:15 UTC
Git commit db95b96854e50b9182ea6e01a3806099ef378cb3 by Martin Gräßlin.
Committed on 17/10/2016 at 06:02.
Pushed by graesslin into branch 'Plasma/5.8'.

[kwinrules] Hide all autogroup related widgets

Summary:
Window tabs which are required for autogroup are currently not supported
in KWin. Thus exposing autogroup related window rules does not make any
sense.

This change hides the options again in the hope that we can bring the
feature back in future.
FIXED-IN: 5.8.2

Reviewers: #kwin, #plasma

Subscribers: plasma-devel, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D2996

M  +13   -0    kcmkwin/kwinrules/ruleswidget.cpp

http://commits.kde.org/kwin/db95b96854e50b9182ea6e01a3806099ef378cb3